# pyneatR

./: README.md  benchmark.py  debug_fmt.py  debug_npercent.py  pyproject.toml  pyrightconfig.json  verify_dtypes.py  verify_scalar.py
examples/: pyneatR-examples.ipynb
src/pyneatR/: __init__.py  currency.py  dates.py  f.py  hooks.py  locale.py  numbers.py  strings.py  utils.py
src/pyneatR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_currency.py  test_dates.py  test_df_integration.py  test_f.py  test_hooks.py  test_locale.py  test_numbers.py  test_strings.py
