[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyneatR"
version = "0.2.0"
description = "Neat formatting for numbers, dates, strings, and currencies using numpy — with locale support and DataFrame hooks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Shivaprakash Suresh", email = "dswithai@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

urls = { "Homepage" = "https://github.com/dswithai/pyneatR" }

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "polars>=0.19.0",
    "great-tables>=0.2.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
